<resources>
    <string name="app_name">Phone Book</string>
    <string name="add_new_contact_title">New Contact</string>
    <string name="enter_first_name_hint">Enter first name</string>
    <string name="enter_last_name_hint">Enter last name</string>
    <string name="enter_phone_number_hint">Enter phone number</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="edit_contact_title">Edit Contact</string>
    <string name="contact_deleted_message">Contact Deleted</string>
</resources>
